Closed Bug 210556 Opened 22 years ago Closed 22 years ago

Should be able to serialize <li> in plaintext without the bullet characters added in.

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: caillon, Assigned: caillon)

Details

Attachments

(1 file, 1 obsolete file)

<ul><li> will always hit this bit of code in plaintext serialization: 768 static char bulletCharArray[] = "*o+#"; 769 NS_ASSERTION(mULCount > 0, "mULCount should be greater than 0 here"); 770 char bulletChar = bulletCharArray[(mULCount - 1) % 4]; 771 mInIndentString.Append(PRUnichar(bulletChar)); This should not happen unless the caller cares about formatted output. I noticed this when implementing Node.textContent (see the DOM 3 core WD). After I do some testing to make sure this doesn't break things like plaintext editing, I'll put out a patch.
Attached patch The smack down (obsolete) — Splinter Review
Make OutputRaw do the right thing.
Comment on attachment 126661 [details] [diff] [review] The smack down Wrong patch. Sigh.
Attachment #126661 - Attachment is obsolete: true
Comment on attachment 126662 [details] [diff] [review] The real patch Okay, so this makes raw mean raw. This does not cause any regressions since nobody is relying on raw output in the plaintext serializer (except Node.textContent, which is the reason for this bug being filed). I ran tests against editor source view, dnd, copy, and mail plaintext view just to be sure though, and everything seemed happy.
Attachment #126662 - Flags: superreview?(jst)
Attachment #126662 - Flags: review?(harishd)
Comment on attachment 126662 [details] [diff] [review] The real patch Make sure that this patch does not break mail and news in the plain text mode. r=harishd
Attachment #126662 - Flags: review?(harishd) → review+
Comment on attachment 126662 [details] [diff] [review] The real patch sr=jst
Attachment #126662 - Flags: superreview?(jst) → superreview+
Fix checked in 07/02/2003 17:34.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: DOM: Core → DOM: Core & HTML
QA Contact: desale → general
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: