Bug 210556 - Plaintext serialization with no formatting whatsoever should be possible. This makes Node.textContent behave as defined in the DOM Level 3 draft. r=harishd@netscape.com sr=jst@netscape.com